# npystream

./: .clang-format  CMakeLists.txt  Config.cmake.in  README.md
.github/workflows/: cmake-single-platform.yml
examples/: bool.npy  complex.npy  float.npy  int-structured.npy  stream  stream.cpp
include/npystream/: map_type.hpp  npystream.hpp  tuple_util.hpp
src/: npystream.cpp
